@@ -212,3 +212,12 @@ after 5.005_02:
 		extension-full-name and Perl-version mangling work in the 
 		same set ot 576 possible keys, this may lead to clashes).
 	$^E was reset on the second read, and contained ".\r\n" at the end.
+after 5.005_53:
+	Would segfault system()ing non-existing program;
+	AOUT build was hosed;
+	warning-test for getpriority() might lock the system hard on 
+		pre-fixpak22 configuration (calling getpriority() on 
+		non-existing process triggers a system-wide bug).
+
+
+	PrfDB was using a bug in processing XSUBs returning U32.
